[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Menus/Ground_&_People.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Anim/start_anim.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Menus/title_screen.gd" type="Script" id=3]

[sub_resource type="StreamTexture" id=3]
load_path = "res://.import/Flip Sighns.png-348c20a9908c2daf9541ae2ce6469350.stex"

[sub_resource type="Animation" id=2]
length = 2.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 5.0, 5.0, 6.0, 7.0, 8.0, 9.0, 9.0, 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0, 15.0, 15.0, 16.0, 17.0, 18.0, 19.0, 20.0, 21.0, 22.0 ]
}

[node name="TitleScreen" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0

[node name="BG" type="Sprite" parent="."]
position = Vector2( 480, 270 )
texture = ExtResource( 1 )

[node name="MainMenuBase" type="Sprite" parent="."]
position = Vector2( 480, 270 )
texture = SubResource( 3 )
hframes = 5
vframes = 5
__meta__ = {
"_editor_description_": "YXNlcHJpdGVfd2l6YXJkX2NvbmZpZwpwbGF5ZXJ8PUFuaW1hdGlvblBsYXllcgpzb3VyY2V8PXJlczovL1Nwcml0ZXMvQXNlcHJpdGUgRmlsZXMvTWFpbiBtZW51LmFzZXByaXRlCmxheWVyfD1GbGlwIFNpZ2hucwpvcF9leHB8PUZhbHNlCm9fZm9sZGVyfD0Kb19uYW1lfD0Kb25seV92aXNpYmxlfD1GYWxzZQpvX2V4X3B8PQo="
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../MainMenuBase")
anims/default = SubResource( 2 )
script = ExtResource( 2 )

[node name="SinglePlayerButton" type="Button" parent="."]
margin_left = 424.0
margin_top = 227.0
margin_right = 517.0
margin_bottom = 247.0
rect_min_size = Vector2( 24, 20 )
size_flags_horizontal = 4
text = "Singleplayer"

[node name="MultiPlayerButton" type="Button" parent="."]
margin_left = 424.0
margin_top = 247.0
margin_right = 517.0
margin_bottom = 267.0
rect_min_size = Vector2( 24, 20 )
size_flags_horizontal = 4
text = "Multiplayer"

[node name="EditorButton" type="Button" parent="."]
margin_left = 448.0
margin_top = 267.0
margin_right = 497.0
margin_bottom = 287.0
rect_min_size = Vector2( 24, 20 )
size_flags_horizontal = 4
text = "Editor"

[node name="SettingsButton" type="Button" parent="."]
margin_left = 440.0
margin_top = 288.0
margin_right = 503.0
margin_bottom = 308.0
rect_min_size = Vector2( 24, 20 )
size_flags_horizontal = 4
text = "Settings"

[node name="QuitButton" type="Button" parent="."]
margin_left = 452.0
margin_top = 309.0
margin_right = 492.0
margin_bottom = 329.0
rect_min_size = Vector2( 24, 20 )
size_flags_horizontal = 4
text = "Quit"

[node name="OfflineLabel" type="Label" parent="."]
visible = false
margin_left = 444.0
margin_top = 210.0
margin_right = 500.0
margin_bottom = 224.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "OFFLINE"

[node name="MainMenuCarsAndText" type="Sprite" parent="."]
visible = false
position = Vector2( 480, 270 )
texture = ExtResource( 1 )

[connection signal="pressed" from="SinglePlayerButton" to="." method="_on_SinglePlayerButton_pressed"]
[connection signal="pressed" from="MultiPlayerButton" to="." method="_on_MultiPlayerButton_pressed"]
[connection signal="pressed" from="EditorButton" to="." method="_on_EditorButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
